# SmartRobot

./: .gitignore  .gitmodules  404.html  Contributing_Guide.md  ISSUE_TEMPLATE.md  README.md  index.html  search.html
.github/workflows/: codeql.yml  deploy-mkdocs.yml
SMARTRobot_user_manual/: mkdocs.yml
SMARTRobot_user_manual/docs/: about.md  faq.md  getting-started.md  index.md  installation.md
SMARTRobot_user_manual/site/: index.html
SMARTRobot_user_manual/site/about/: index.html
SMARTRobot_user_manual/site/faq/: index.html
SMARTRobot_user_manual/site/getting-started/: index.html
SMARTRobot_user_manual/site/installation/: index.html
SMARTRobot_user_manual/site/search/: search_index.json
about/: index.html
desktop/: app.py  config.py  helpers.py  read_this_first.txt  requirements.txt  setup.py
desktop/features/: __init__.py
desktop/features/home/: __init__.py  routes.py
desktop/features/my_robot/: __init__.py  (+2 more)
desktop/foxglove/: __init__.py  bridge.py  constants.py  protocol.py
desktop/templates/: base.html  index.html  loading.html  my_robot.html
desktop/utils/: __init__.py  command_converter.py
faq/: index.html
getting-started/: index.html
installation/: index.html
lectures/: lesson-1-driving(6-12).md  lesson-1-driving(k-5).md  lesson-1-driving(uni).md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/slu_smart/: package.xml  setup.cfg  setup.py
ros2_ws/src/slu_smart/slu_smart/: test_pub.py
search/: search_index.json
static/css/: style.css
templates/: .gitignore  base.html  index.html
(+30 files in other folders)
